fix(openapi): Be more accurate for non-empty-lists
