# src/types/openapi/openapi-administration.ts
@@ -751,7 +751,9 @@ export interface operations {
                         ocs: {
                             meta: components["schemas"]["OCSMeta"];
                             data: {
-                                [key: string]: Record<string, never>;
+                                version: string;
+                                warning?: string;
+                                features?: string[];
                             };
                         };
                     };
